--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,9 @@
   },
   "imports": {
     "@/": "./",
-    "@std/http": "jsr:@std/http@^1.0.6"
+    "@std/http": "jsr:@std/http@^1.0.6",
+    "@std/media-types": "jsr:@std/media-types@^1.0.3",
+    "@std/path": "jsr:@std/path@^1.0.6"
   },
   "lock": false
 }
