--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,8 @@
     "@/": "./",
     "@std/http": "jsr:@std/http@^1.0.6",
     "@std/media-types": "jsr:@std/media-types@^1.0.3",
-    "@std/path": "jsr:@std/path@^1.0.6"
+    "@std/path": "jsr:@std/path@^1.0.6",
+    "tls": "node:tls"
   },
   "lock": false
 }
